<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
tools:context="layout.PreferencesFragment">

    <EditTextPreference
        android:title="@string/strNameLabel"
        android:key="@string/KEY_USER_DISP_NAME"
        android:summary="Allows editing your display name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListPreference
        android:title="@string/strClearHistory"
        android:key="@string/KEY_CLEAR_HISTORY"
        android:summary="Clear past trips"
        android:defaultValue="1"
        android:entries="@array/arrClearOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBoxPreference
        android:title="@string/strAppUpdates"
        android:key="@string/KEY_APP_UPDATES"
        android:defaultValue="false"
        android:summary="Allow application to check for latest versions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</PreferenceScreen>