<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerScreenDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegistrationScreenActivity">

    <!-- Layout that contains the main content of the screen -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <!-- Include custom tool bar at the top of the screen -->
        <include
            android:id="@+id/registerScreenToolbar"
            layout="@layout/element_toolbar" />

        <ScrollView
            android:id="@+id/regScreenVerticalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/registerScreenToolbar"
            android:layout_above="@+id/registerScreenBottomBar" >

            <LinearLayout
                android:id="@+id/regElementsContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/loginImgView"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/user_registration_banner"
                    android:contentDescription="@string/lblDescNewUserRegistration" />

                <!-- User's Name Text Field -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regUserNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <EditText android:id="@+id/tfUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/strHintName" />

                </android.support.design.widget.TextInputLayout>

                <!-- User email-id Text Field -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regEmailIDTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <EditText android:id="@+id/tfLoginEmailID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/strHintEmailID" />

                </android.support.design.widget.TextInputLayout>

                <!-- User Password Text Field -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/loginPassTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <EditText android:id="@+id/tfLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/strHintPassword" />

                </android.support.design.widget.TextInputLayout>

                <!-- Re-Enter Password Text Field -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/regConfirmPassTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <EditText android:id="@+id/tfRegConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/strHintReenterPassword" />

                </android.support.design.widget.TextInputLayout>

                <!-- Register Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:text="@string/strRegister"
                    android:onClick="registerUser"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

            </LinearLayout>

        </ScrollView>

        <!-- Include custom bottom bar at the bottom of the screen -->
        <include
            android:id="@+id/registerScreenBottomBar"
            layout="@layout/element_bottombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
